<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Green Energy Shifting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_signout">Log Out</string>
	<string name="errormsg">Error Message</string>
	<string name="login">Log In</string>
	<string name="logout">Log Out</string>
	<string name="password">Password</string>
	<string name="signup">Sign Up</string>
	<string name="username">Username</string>
	<string name="scorevalue">0</string>
	<string name="uservalue">Username</string>
	<string name="questnew">New to Green Energy?</string>
	<string name="currentgreenenergy">Current Green Energy : </string>
	<string name="prediction">Green Energy Prediction :</string>
	<string name="oneHour">in an hour  :</string>
	<string name="threeHour">in 3 hours : </string>
	<string name="fiveHour">in 5 hours :</string>
	<string name="moreDetail">More Details</string>
	<string name="percentageOneHour">36%</string>
	<string name="percentageThreeHour">45%</string>
	<string name="percentageFiveHour">67%</string>
	<string name="currentPercentage">58%</string>
	<string name="headdetail">Hourly Green Energy Prediction</string>
	<string name="loading">Loading #8230;</string>
	<string name="energywidget">Loading&#8230;</string>
	<string name="notification">Notify Me!</string>
	<string name="manual">Help</string>
</resources>