<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="3dp" >

                   <TextView
                       android:id="@+id/score"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_marginRight="10dp"
                       android:layout_marginTop="8dp"
                       android:text="@string/scorevalue"
                       android:textAppearance="?android:attr/textAppearanceLarge"
                       android:textColor="#0B610B" />

                   <TextView
                       android:id="@+id/usernameview"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_marginRight="5dp"
                       android:layout_marginTop="7dp"
                       android:layout_weight="1"
                       android:text="@string/uservalue"
                       android:textAppearance="?android:attr/textAppearanceMedium"
                       android:textColor="#0B0B61"
                       android:textStyle="bold" />

                   <ImageButton
                       android:id="@+id/twitterImageButton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="2dp"
                       android:layout_marginRight="5dp"
                       android:background="@drawable/twitterstyle"
                       android:src="@drawable/twitter_icon" />

               </LinearLayout>

               <View
                   android:layout_width="fill_parent"
                   android:layout_height="0.7dip"
                   android:background="#173B0B" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" >

                   <TextView
                       android:id="@+id/currentGreenEnergy"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="4dp"
                       android:layout_marginTop="9dp"
                       android:layout_weight="1"
                       android:text="@string/currentgreenenergy"
                       android:textAppearance="?android:attr/textAppearanceMedium"
                       android:textColor="#0B610F"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/percentageOfGreenEnergy"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginRight="5dp"
                       android:layout_marginTop="9dp"
                       android:layout_weight="5"
                       android:text="@string/currentPercentage"
                       android:textAppearance="?android:attr/textAppearanceMedium" />
               </LinearLayout>

              <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="10dp"
                   android:layout_marginTop="10dp" >

                   <ImageView
                       android:id="@+id/chartImageView"
                       android:layout_width="250dp"
                       android:layout_height="250dp"
                       android:layout_marginLeft="10dp"
                       android:layout_weight="5" 
                       android:src="@drawable/fake_1_24" />

               </LinearLayout>

               <View
                   android:layout_width="fill_parent"
                   android:layout_height="0.7dip"
                   android:background="#173B0B" />

               <TextView
                   android:id="@+id/titledetail"
                   android:textColor="#3f5f7a"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="5dp"
                   android:layout_marginTop="10dp"
                   android:text="@string/prediction"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textStyle="bold" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="2dp"
                   android:layout_marginTop="4dp" >

                   <TextView
                       android:id="@+id/inOneHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_weight="1"
                       android:text="@string/oneHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />

                   <TextView
                       android:id="@+id/percentageOneHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/percentageOneHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="2dp"
                   android:layout_marginTop="4dp" >

                   <TextView
                       android:id="@+id/inThreeHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_weight="1"
                       android:text="@string/threeHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />

                   <TextView
                       android:id="@+id/percentageThreeHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/percentageThreeHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="2dp"
                   android:layout_marginTop="4dp" >

                   <TextView
                       android:id="@+id/inFiveHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginLeft="5dp"
                       android:layout_weight="1"
                       android:text="@string/fiveHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />

                   <TextView
                       android:id="@+id/percentageFiveHour"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/percentageFiveHour"
                       android:textAppearance="?android:attr/textAppearanceSmall" />
               </LinearLayout>

               <Button
                   android:id="@+id/moreDetailButton"
                   android:layout_width="180dp"
                   android:layout_height="35dp"
                   android:layout_gravity="center"
                   android:layout_marginBottom="10dp"
                   android:layout_marginTop="20dp"
                   android:background="@drawable/detailbutton"
                   android:shadowRadius="3"
                   android:text="@string/moreDetail"
                   android:textColor="#FFFFFF"
                   android:textSize="20sp" />

           </LinearLayout>

</ScrollView>